Add picoCTF SSTI writeup and project structure

--- a/picoCTF/2025-SSTI.md
+++ b/picoCTF/2025-SSTI.md
@@ -1,6 +1,4 @@
----
-
-````markdown
+```markdown
 # picoCTF – Server-Side Template Injection (SSTI) – Writeup
 
 **Category:** Web Exploitation  
@@ -28,7 +26,7 @@ Start with a math probe to see if the template engine evaluates input:
 
 ```jinja
 {{7*7}}
-````
+```
 
 **Result:** The page returns `49`.
 This confirms server-side evaluation (Jinja2).
